Made all the changes for the first submission to arxiv

--- a/refs.bib
+++ b/refs.bib
@@ -1,15 +1,15 @@
 @article{Agazie:2023,
-doi = {10.3847/2041-8213/acdac6},
-url = {https://dx.doi.org/10.3847/2041-8213/acdac6},
-year = {2023},
-month = {jun},
-publisher = {The American Astronomical Society},
-volume = {951},
-number = {1},
-pages = {L8},
-author = {Gabriella Agazie and Akash Anumarlapudi and Anne M. Archibald and Zaven Arzoumanian and Paul T. Baker and Bence Bécsy and Laura Blecha and Adam Brazier and Paul R. Brook and Sarah Burke-Spolaor and Rand Burnette and Robin Case and Maria Charisi and Shami Chatterjee and Katerina Chatziioannou and Belinda D. Cheeseboro and Siyuan Chen and Tyler Cohen and James M. Cordes and Neil J. Cornish and Fronefield Crawford and H. Thankful Cromartie and Kathryn Crowter and Curt J. Cutler and Megan E. DeCesar and Dallas DeGan and Paul B. Demorest and Heling Deng and Timothy Dolch and Brendan Drachler and Justin A. Ellis and Elizabeth C. Ferrara and William Fiore and Emmanuel Fonseca and Gabriel E. Freedman and Nate Garver-Daniels and Peter A. Gentile and Kyle A. Gersbach and Joseph Glaser and Deborah C. Good and Kayhan Gültekin and Jeffrey S. Hazboun and Sophie Hourihane and Kristina Islo and Ross J. Jennings and Aaron D. Johnson and Megan L. Jones and Andrew R. Kaiser and David L. Kaplan and Luke Zoltan Kelley and Matthew Kerr and Joey S. Key and Tonia C. Klein and Nima Laal and Michael T. Lam and William G. Lamb and T. Joseph W. Lazio and Natalia Lewandowska and Tyson B. Littenberg and Tingting Liu and Andrea Lommen and Duncan R. Lorimer and Jing Luo and Ryan S. Lynch and Chung-Pei Ma and Dustin R. Madison and Margaret A. Mattson and Alexander McEwen and James W. McKee and Maura A. McLaughlin and Natasha McMann and Bradley W. Meyers and Patrick M. Meyers and Chiara M. F. Mingarelli and Andrea Mitridate and Priyamvada Natarajan and Cherry Ng and David J. Nice and Stella Koch Ocker and Ken D. Olum and Timothy T. Pennucci and Benetge B. P. Perera and Polina Petrov and Nihan S. Pol and Henri A. Radovan and Scott M. Ransom and Paul S. Ray and Joseph D. Romano and Shashwat C. Sardesai and Ann Schmiedekamp and Carl Schmiedekamp and Kai Schmitz and Levi Schult and Brent J. Shapiro-Albert and Xavier Siemens and Joseph Simon and Magdalena S. Siwek and Ingrid H. Stairs and Daniel R. Stinebring and Kevin Stovall and Jerry P. Sun and Abhimanyu Susobhanan and Joseph K. Swiggum and Jacob Taylor and Stephen R. Taylor and Jacob E. Turner and Caner Unal and Michele Vallisneri and Rutger van Haasteren and Sarah J. Vigeland and Haley M. Wahl and Qiaohong Wang and Caitlin A. Witt and Olivia Young and The NANOGrav Collaboration},
-title = {The NANOGrav 15 yr Data Set: Evidence for a Gravitational-wave Background},
-journal = {The Astrophysical Journal Letters}
+    doi = {10.3847/2041-8213/acdac6},
+    url = {https://dx.doi.org/10.3847/2041-8213/acdac6},
+    year = {2023},
+    month = {jun},
+    publisher = {The American Astronomical Society},
+    volume = {951},
+    number = {1},
+    pages = {L8},
+    author = {Gabriella Agazie and Akash Anumarlapudi and Anne M. Archibald and Zaven Arzoumanian and Paul T. Baker and Bence Bécsy and Laura Blecha and Adam Brazier and Paul R. Brook and Sarah Burke-Spolaor and Rand Burnette and Robin Case and Maria Charisi and Shami Chatterjee and Katerina Chatziioannou and Belinda D. Cheeseboro and Siyuan Chen and Tyler Cohen and James M. Cordes and Neil J. Cornish and Fronefield Crawford and H. Thankful Cromartie and Kathryn Crowter and Curt J. Cutler and Megan E. DeCesar and Dallas DeGan and Paul B. Demorest and Heling Deng and Timothy Dolch and Brendan Drachler and Justin A. Ellis and Elizabeth C. Ferrara and William Fiore and Emmanuel Fonseca and Gabriel E. Freedman and Nate Garver-Daniels and Peter A. Gentile and Kyle A. Gersbach and Joseph Glaser and Deborah C. Good and Kayhan Gültekin and Jeffrey S. Hazboun and Sophie Hourihane and Kristina Islo and Ross J. Jennings and Aaron D. Johnson and Megan L. Jones and Andrew R. Kaiser and David L. Kaplan and Luke Zoltan Kelley and Matthew Kerr and Joey S. Key and Tonia C. Klein and Nima Laal and Michael T. Lam and William G. Lamb and T. Joseph W. Lazio and Natalia Lewandowska and Tyson B. Littenberg and Tingting Liu and Andrea Lommen and Duncan R. Lorimer and Jing Luo and Ryan S. Lynch and Chung-Pei Ma and Dustin R. Madison and Margaret A. Mattson and Alexander McEwen and James W. McKee and Maura A. McLaughlin and Natasha McMann and Bradley W. Meyers and Patrick M. Meyers and Chiara M. F. Mingarelli and Andrea Mitridate and Priyamvada Natarajan and Cherry Ng and David J. Nice and Stella Koch Ocker and Ken D. Olum and Timothy T. Pennucci and Benetge B. P. Perera and Polina Petrov and Nihan S. Pol and Henri A. Radovan and Scott M. Ransom and Paul S. Ray and Joseph D. Romano and Shashwat C. Sardesai and Ann Schmiedekamp and Carl Schmiedekamp and Kai Schmitz and Levi Schult and Brent J. Shapiro-Albert and Xavier Siemens and Joseph Simon and Magdalena S. Siwek and Ingrid H. Stairs and Daniel R. Stinebring and Kevin Stovall and Jerry P. Sun and Abhimanyu Susobhanan and Joseph K. Swiggum and Jacob Taylor and Stephen R. Taylor and Jacob E. Turner and Caner Unal and Michele Vallisneri and Rutger van Haasteren and Sarah J. Vigeland and Haley M. Wahl and Qiaohong Wang and Caitlin A. Witt and Olivia Young and The NANOGrav Collaboration},
+    title = {The NANOGrav 15 yr Data Set: Evidence for a Gravitational-wave Background},
+    journal = {The Astrophysical Journal Letters}
 }
 
 @article{Fujita:2018ehq,
@@ -43,24 +43,23 @@ journal = {The Astrophysical Journal Letters}
 @misc{GH,
     author = {Choi, Chris},
     url = {https://github.com/ChrisChoi314/constrain_mass_nanograv_15},
-    howpublished = {\url{https://github.com/ChrisChoi314/constrain_mass_nanograv_15
-    }},
+    howpublished = {\url{https://github.com/ChrisChoi314/constrain_mass_nanograv_15}},
     year = {2023}
 }
 
 @article{Afzal:2023,
-doi = {10.3847/2041-8213/acdc91},
-url = {https://dx.doi.org/10.3847/2041-8213/acdc91},
-year = {2023},
-month = {jun},
-publisher = {The American Astronomical Society},
-volume = {951},
-number = {1},
-pages = {L11},
-author = {Adeela Afzal and Gabriella Agazie and Akash Anumarlapudi and Anne M. Archibald and Zaven Arzoumanian and Paul T. Baker and Bence Bécsy and Jose Juan Blanco-Pillado and Laura Blecha and Kimberly K. Boddy and Adam Brazier and Paul R. Brook and Sarah Burke-Spolaor and Rand Burnette and Robin Case and Maria Charisi and Shami Chatterjee and Katerina Chatziioannou and Belinda D. Cheeseboro and Siyuan Chen and Tyler Cohen and James M. Cordes and Neil J. Cornish and Fronefield Crawford and H. Thankful Cromartie and Kathryn Crowter and Curt J. Cutler and Megan E. DeCesar and Dallas DeGan and Paul B. Demorest and Heling Deng and Timothy Dolch and Brendan Drachler and Richard von Eckardstein and Elizabeth C. Ferrara and William Fiore and Emmanuel Fonseca and Gabriel E. Freedman and Nate Garver-Daniels and Peter A. Gentile and Kyle A. Gersbach and Joseph Glaser and Deborah C. Good and Lydia Guertin and Kayhan Gültekin and Jeffrey S. Hazboun and Sophie Hourihane and Kristina Islo and Ross J. Jennings and Aaron D. Johnson and Megan L. Jones and Andrew R. Kaiser and David L. Kaplan and Luke Zoltan Kelley and Matthew Kerr and Joey S. Key and Nima Laal and Michael T. Lam and William G. Lamb and T. Joseph W. Lazio and Vincent S. H. Lee and Natalia Lewandowska and Rafael R. Lino dos Santos and Tyson B. Littenberg and Tingting Liu and Duncan R. Lorimer and Jing Luo and Ryan S. Lynch and Chung-Pei Ma and Dustin R. Madison and Alexander McEwen and James W. McKee and Maura A. McLaughlin and Natasha McMann and Bradley W. Meyers and Patrick M. Meyers and Chiara M. F. Mingarelli and Andrea Mitridate and Jonathan Nay and Priyamvada Natarajan and Cherry Ng and David J. Nice and Stella Koch Ocker and Ken D. Olum and Timothy T. Pennucci and Benetge B. P. Perera and Polina Petrov and Nihan S. Pol and Henri A. Radovan and Scott M. Ransom and Paul S. Ray and Joseph D. Romano and Shashwat C. Sardesai and Ann Schmiedekamp and Carl Schmiedekamp and Kai Schmitz and Tobias Schröder and Levi Schult and Brent J. Shapiro-Albert and Xavier Siemens and Joseph Simon and Magdalena S. Siwek and Ingrid H. Stairs and Daniel R. Stinebring and Kevin Stovall and Peter Stratmann and Jerry P. Sun and Abhimanyu Susobhanan and Joseph K. Swiggum and Jacob Taylor and Stephen R. Taylor and Tanner Trickle and Jacob E. Turner and Caner Unal and Michele Vallisneri and Sonali Verma and Sarah J. Vigeland and Haley M. Wahl and Qiaohong Wang and Caitlin A. Witt and David Wright and Olivia Young and Kathryn M. Zurek and The NANOGrav Collaboration},
-title = {The NANOGrav 15 yr Data Set: Search for Signals from New Physics},
-journal = {The Astrophysical Journal Letters},
-abstract = {The 15 yr pulsar timing data set collected by the North American Nanohertz Observatory for Gravitational Waves (NANOGrav) shows positive evidence for the presence of a low-frequency gravitational-wave (GW) background. In this paper, we investigate potential cosmological interpretations of this signal, specifically cosmic inflation, scalar-induced GWs, first-order phase transitions, cosmic strings, and domain walls. We find that, with the exception of stable cosmic strings of field theory origin, all these models can reproduce the observed signal. When compared to the standard interpretation in terms of inspiraling supermassive black hole binaries (SMBHBs), many cosmological models seem to provide a better fit resulting in Bayes factors in the range from 10 to 100. However, these results strongly depend on modeling assumptions about the cosmic SMBHB population and, at this stage, should not be regarded as evidence for new physics. Furthermore, we identify excluded parameter regions where the predicted GW signal from cosmological sources significantly exceeds the NANOGrav signal. These parameter constraints are independent of the origin of the NANOGrav signal and illustrate how pulsar timing data provide a new way to constrain the parameter space of these models. Finally, we search for deterministic signals produced by models of ultralight dark matter (ULDM) and dark matter substructures in the Milky Way. We find no evidence for either of these signals and thus report updated constraints on these models. In the case of ULDM, these constraints outperform torsion balance and atomic clock constraints for ULDM coupled to electrons, muons, or gluons.}
+    doi = {10.3847/2041-8213/acdc91},
+    url = {https://dx.doi.org/10.3847/2041-8213/acdc91},
+    year = {2023},
+    month = {jun},
+    publisher = {The American Astronomical Society},
+    volume = {951},
+    number = {1},
+    pages = {L11},
+    author = {Adeela Afzal and Gabriella Agazie and Akash Anumarlapudi and Anne M. Archibald and Zaven Arzoumanian and Paul T. Baker and Bence Bécsy and Jose Juan Blanco-Pillado and Laura Blecha and Kimberly K. Boddy and Adam Brazier and Paul R. Brook and Sarah Burke-Spolaor and Rand Burnette and Robin Case and Maria Charisi and Shami Chatterjee and Katerina Chatziioannou and Belinda D. Cheeseboro and Siyuan Chen and Tyler Cohen and James M. Cordes and Neil J. Cornish and Fronefield Crawford and H. Thankful Cromartie and Kathryn Crowter and Curt J. Cutler and Megan E. DeCesar and Dallas DeGan and Paul B. Demorest and Heling Deng and Timothy Dolch and Brendan Drachler and Richard von Eckardstein and Elizabeth C. Ferrara and William Fiore and Emmanuel Fonseca and Gabriel E. Freedman and Nate Garver-Daniels and Peter A. Gentile and Kyle A. Gersbach and Joseph Glaser and Deborah C. Good and Lydia Guertin and Kayhan Gültekin and Jeffrey S. Hazboun and Sophie Hourihane and Kristina Islo and Ross J. Jennings and Aaron D. Johnson and Megan L. Jones and Andrew R. Kaiser and David L. Kaplan and Luke Zoltan Kelley and Matthew Kerr and Joey S. Key and Nima Laal and Michael T. Lam and William G. Lamb and T. Joseph W. Lazio and Vincent S. H. Lee and Natalia Lewandowska and Rafael R. Lino dos Santos and Tyson B. Littenberg and Tingting Liu and Duncan R. Lorimer and Jing Luo and Ryan S. Lynch and Chung-Pei Ma and Dustin R. Madison and Alexander McEwen and James W. McKee and Maura A. McLaughlin and Natasha McMann and Bradley W. Meyers and Patrick M. Meyers and Chiara M. F. Mingarelli and Andrea Mitridate and Jonathan Nay and Priyamvada Natarajan and Cherry Ng and David J. Nice and Stella Koch Ocker and Ken D. Olum and Timothy T. Pennucci and Benetge B. P. Perera and Polina Petrov and Nihan S. Pol and Henri A. Radovan and Scott M. Ransom and Paul S. Ray and Joseph D. Romano and Shashwat C. Sardesai and Ann Schmiedekamp and Carl Schmiedekamp and Kai Schmitz and Tobias Schröder and Levi Schult and Brent J. Shapiro-Albert and Xavier Siemens and Joseph Simon and Magdalena S. Siwek and Ingrid H. Stairs and Daniel R. Stinebring and Kevin Stovall and Peter Stratmann and Jerry P. Sun and Abhimanyu Susobhanan and Joseph K. Swiggum and Jacob Taylor and Stephen R. Taylor and Tanner Trickle and Jacob E. Turner and Caner Unal and Michele Vallisneri and Sonali Verma and Sarah J. Vigeland and Haley M. Wahl and Qiaohong Wang and Caitlin A. Witt and David Wright and Olivia Young and Kathryn M. Zurek and The NANOGrav Collaboration},
+    title = {The NANOGrav 15 yr Data Set: Search for Signals from New Physics},
+    journal = {The Astrophysical Journal Letters},
+    abstract = {The 15 yr pulsar timing data set collected by the North American Nanohertz Observatory for Gravitational Waves (NANOGrav) shows positive evidence for the presence of a low-frequency gravitational-wave (GW) background. In this paper, we investigate potential cosmological interpretations of this signal, specifically cosmic inflation, scalar-induced GWs, first-order phase transitions, cosmic strings, and domain walls. We find that, with the exception of stable cosmic strings of field theory origin, all these models can reproduce the observed signal. When compared to the standard interpretation in terms of inspiraling supermassive black hole binaries (SMBHBs), many cosmological models seem to provide a better fit resulting in Bayes factors in the range from 10 to 100. However, these results strongly depend on modeling assumptions about the cosmic SMBHB population and, at this stage, should not be regarded as evidence for new physics. Furthermore, we identify excluded parameter regions where the predicted GW signal from cosmological sources significantly exceeds the NANOGrav signal. These parameter constraints are independent of the origin of the NANOGrav signal and illustrate how pulsar timing data provide a new way to constrain the parameter space of these models. Finally, we search for deterministic signals produced by models of ultralight dark matter (ULDM) and dark matter substructures in the Milky Way. We find no evidence for either of these signals and thus report updated constraints on these models. In the case of ULDM, these constraints outperform torsion balance and atomic clock constraints for ULDM coupled to electrons, muons, or gluons.}
 }
 
 
@@ -1424,5 +1423,19 @@ archivePrefix = {arXiv},
     volume = "282",
     pages = "397--436",
     year = "1987"
+}
+
+@ARTICLE{Deryagin:1986,
+       author = {{Deryagin}, D.~V. and {Grigoriev}, D. Yu. and {Rubakov}, V.~A. and {Sazhin}, M.~V.},
+        title = "{Possible Anisotropic Phases in the Early Universe and Gravitational Wave Background}",
+      journal = {Modern Physics Letters A},
+         year = 1986,
+        month = jan,
+       volume = {1},
+       number = {11},
+        pages = {593-600},
+          doi = {10.1142/S0217732386000750},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1986MPLA....1..593D},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
