--- a/MG.tex
+++ b/MG.tex
@@ -421,15 +421,15 @@ $\displaystyle##$\hfil\cr>\cr\sim\cr}}}
 
 \begin{document}
 
-% \title{Constraining Time Dependent Massive Gravity with the NANOGrav 15-Year Data Set}
-%\title{Using Time-Dependent Massive Gravity to Reproduce the Stochastic Gravitational Wave Background from the NANOGrav 15-Year Data Set}
-\title{Stochastic Gravitational Wave Background Signal Detected by NANOGrav 15-year Data Set in the View of Massive Gravity?}
+\title{Stochastic Gravitational Wave Background Detection through NANOGrav 15-year Data Set in the View of Massive Gravity}
 
 \date{\today}
-\preprint{N/A}
-%TK: alphabetic order for now
 \author{Chris~Choi}
 \email{minyeonc@andrew.cmu.edu}
+\affiliation{Department of Physics, Carnegie Mellon University, Pittsburgh, PA 15213, USA}
+
+\author{Jacob~Magallanes}
+\email{jmagalla@andrew.cmu.edu}
 \affiliation{Department of Physics, Carnegie Mellon University, Pittsburgh, PA 15213, USA}
 
 \author{Murman~Gurgenidze}
@@ -443,29 +443,15 @@ $\displaystyle##$\hfil\cr>\cr\sim\cr}}}
 \affiliation{School of Natural Sciences and Medicine, Ilia State University, 0194 Tbilisi, Georgia}
 \affiliation{Abastumani Astrophysical Observatory, Tbilisi, GE-0179, Georgia}
 
-\author{Sachiko~Kuroyanagi}
-\email{sachiko.kuroyanagi@csic.es}
-\affiliation{Department of Physics, Nagoya University, Furo-cho Chikusa-ku, Nagoya 464-8602, Japan}
-\affiliation{Instituto de F\'{i}sica Te\'{o}rica UAM-CSIC, Universidad Aut\'{o}noma de Madrid, 28049 Madrid, Spain}
-
-\author{Jacob~Magallanes}
-\email{jmagalla@andrew.cmu.edu}
-\affiliation{Department of Physics, Carnegie Mellon University, Pittsburgh, PA 15213, USA}
-
-\author{Shinji~Mukohyama}
-\email{shinji.mukohyama@yukawa.kyoto-u.ac.jp}
-\affiliation{Center for Gravitational Physics and Quantum Information, Yukawa Institute for Theoretical Physics, Kyoto University, Sakyo-ku, Kyoto 606-8502, Japan}
-\affiliation{Kavli Institute for the Physics and Mathematics of the Universe, the University of Tokyo Institutes for Advanced Study, the University of Tokyo, Kashiwa, Chiba, 277-8583, Japan}
-
 \begin{abstract}
-Convincing evidence of a stochastic gravitational wave background has been found by the NANOGrav collaboration in the 15-Year data set. From this signal, we can evaluate the possibility of its source being from the early universe through the tensor perturbations induced by a massive spin-2 graviton field. We consider a time dependent model of the minimal theory of massive gravity, and find values of the graviton mass, mass cutoff time, and Hubble rate of inflation that amplify the energy spectra of primordial gravitational waves sufficiently to reproduce the signal from the NANOGrav data within 1-3 standard deviation. However, a suppression mechanism for high frequency modes must be introduced to obey the big bang nucleosynthesis (BBN) bound. While there are regions of the parameter space that partially reproduce the signal, it remains a challenge to simultaneously respect the BBN and cosmic microwave background (CMB) bounds in doing so.
+Convincing evidence of a stochastic gravitational wave background has been found by the NANOGrav collaboration in the 15-Year data set. From this signal, we can evaluate the possibility of its source being from the early universe through the tensor perturbations induced by a massive spin-2 graviton field. We consider a time dependent model of the minimal theory of massive gravity, and find values of the graviton mass, mass cutoff time, and Hubble rate of inflation that amplify the energy spectra of primordial gravitational waves sufficiently to reproduce the signal from the NANOGrav data within 1-3 standard deviation. However, a suppression mechanism for high frequency modes must be introduced to conservatively obey the big bang nucleosynthesis (BBN) bound. While there are regions of the parameter space that reproduces the signal, it remains a challenge to simultaneously respect the BBN and cosmic microwave background (CMB) bounds without making the graviton mass cutoff time too deep into the matter dominated era.
 \end{abstract}
 
 \maketitle
 \section{Introduction}
-Evidence supporting the existence of a stochastic gravitational wave background (SGWB) has been found by 15 years of observation of pulsars by the North American Nanohertz Observatory for Gravitational Waves (NANOGrav) collaboration \cite{Agazie:2023}, and after confirmed by the Chinese Pulsar Timing Array (CPTA) \cite{Xu:2023wog}, the European Pulsar Timing Array (EPTA) \cite{Antoniadis:2023lym,Antoniadis:2023ott}, and the Parkes Pulsar Timing Array (PPTA) \cite{Zic:2023gta,Reardon:2023gzh}. We want to investigate alternatives to the astrophysical explanation, which proposes that the source of the SGWB is inspiraling supermassive black hole binaries (SMBHBs) \citep{Rajagopal:1995,Jaffe:2002rt,Burke-Spolaor:2018bvk} described by a power-law \cite{Phinney:2001di}, slightly different from one that was observed. 
+Evidence supporting the existence of a stochastic gravitational wave background (SGWB) has been found by 15 years of observation of pulsars by the North American Nanohertz Observatory for Gravitational Waves (NANOGrav) collaboration \cite{Agazie:2023}, and after confirmed by the Chinese Pulsar Timing Array (CPTA) \cite{Xu:2023wog}, the European Pulsar Timing Array (EPTA) \cite{Antoniadis:2023lym,Antoniadis:2023ott}, and the Parkes Pulsar Timing Array (PPTA) \cite{Zic:2023gta,Reardon:2023gzh}. We investigate alternatives to the astrophysical explanation (like inspiraling supermassive black hole binaries (SMBHBs) \citep{Rajagopal:1995,Jaffe:2002rt,Burke-Spolaor:2018bvk}), such as the time dependent model of massive gravity proposed in Ref.\ \cite{Fujita:2018ehq}. 
 
-However, more exotic, cosmological origins of the SGWB have not been ruled out  \citep{Maggiore:1999vm, Caprini:2018mtu, Chen:2021wdo, Wu:2021kmd, Chen:2021ncc, PPTA:2022eul, Wu:2023pbt, Wu:2023dnp, Madge:2023cak}, due to a discrepancy between the power-law of SMBHBs and the actual signal. Such cosmological explanations for the source include  cosmic strings \cite{Damour:2004kw,Siemens:2006yp, Chen:2022azo,Bian:2022tju}, domain walls \cite{Ferreira:2022zzo, Zhang:2023nrs}, first-order phase transitions in the early universe \cite{Kibble:1976sj, Vilenkin:1984ib,Caprini:2010xv, Kobakhidze:2017mru, Arunasalam:2017ajm, Xue:2021gyq, NANOGrav:2021flc, Moore:2021ibq, Addazi:2023jvg, Athron:2023xlk, Bringmann:2023opz}, primordial gravitational waves \cite{Grishchuk:1976, Grishchuk:1977zz, Starobinsky:1980te, Linde:1981mu, Fabbri:1983us, Grishchuk:2005qe, Lasky:2015lej}, and scalar-induced gravitational waves \cite{Tomita:1967non, Saito:2008jc, Young:2014ana, Yuan:2019udt, Yuan:2019wwo, Chen:2019xse, Cai:2019bmk, Yuan:2019fwv, Liu:2021jnw, Liu:2023ymk, Cai:2023dls} generated by primordial black holes \cite{Zeldovich:1967lct,Hawking:1971ei,Carr:1974nx,Chen:2018czv,Chen:2018rzo,Liu:2018ess,Liu:2019rnx,Chen:2019irf,Liu:2020cds,Wu:2020drm,Chen:2021nxo,Chen:2022fda,Chen:2022qvg,Liu:2022iuf,Zheng:2022wqo} formed by scalar-tensor inflation. The NANOGrav and EPTA collaborations have considered some of these aforementioned new physics sources \cite{Afzal:2023, Antoniadis:2023xlr}. In this paper, we consider the primordial gravitational wave hypothesis, with an amplification due to massive gravity.
+Compared to astrophysical origins, more exotic explanations lie in cosmological sources of the SGWB  \citep{Maggiore:1999vm, Caprini:2018mtu, Chen:2021wdo, Wu:2021kmd, Chen:2021ncc, PPTA:2022eul, Wu:2023pbt, Wu:2023dnp, Madge:2023cak}. Such cosmological explanations for the source include  cosmic strings \cite{Damour:2004kw,Siemens:2006yp, Chen:2022azo,Bian:2022tju}, domain walls \cite{Ferreira:2022zzo, Zhang:2023nrs}, first-order phase transitions in the early universe \cite{Kibble:1976sj, Vilenkin:1984ib,Caprini:2010xv, Kobakhidze:2017mru, Arunasalam:2017ajm, Xue:2021gyq, NANOGrav:2021flc, Moore:2021ibq, Addazi:2023jvg, Athron:2023xlk, Bringmann:2023opz}, primordial gravitational waves \cite{Grishchuk:1976, Grishchuk:1977zz, Starobinsky:1980te, Linde:1981mu, Fabbri:1983us, Grishchuk:2005qe, Lasky:2015lej}, and scalar-induced gravitational waves \cite{Tomita:1967non, Saito:2008jc, Young:2014ana, Yuan:2019udt, Yuan:2019wwo, Chen:2019xse, Cai:2019bmk, Yuan:2019fwv, Liu:2021jnw, Liu:2023ymk, Cai:2023dls} generated by primordial black holes \cite{Zeldovich:1967lct,Hawking:1971ei,Carr:1974nx,Chen:2018czv,Chen:2018rzo,Liu:2018ess,Liu:2019rnx,Chen:2019irf,Liu:2020cds,Wu:2020drm,Chen:2021nxo,Chen:2022fda,Chen:2022qvg,Liu:2022iuf,Zheng:2022wqo} formed by scalar-tensor inflation. The NANOGrav and EPTA collaborations have considered some of these aforementioned new physics sources \cite{Afzal:2023, Antoniadis:2023xlr}. In this paper, we consider the primordial gravitational wave hypothesis, with an amplification due to massive gravity.
 
 Primordial gravitational waves generated during cosmic inflation, freely propagating in the radiation-dominated plasma, are predicted by theory \cite{Grishchuk:1976, Grishchuk:1977zz, Starobinsky:1980te, Linde:1981mu, Fabbri:1983us}. It is possible that the signatures of these waves we detect could differ from what we expect based on GR. In fact, the propagation of these primordial gravitational waves could very well be modified by alternate theories of gravity, including massive gravity (MG), first introduced by Fierz and Pauli in 1939 \cite{Fierz:1939ix}. 
 
@@ -515,7 +501,7 @@ where ${\bf k}$ is the comoving momentum, $e^\lambda_{ij}$ are the polarization 
 where $a$ is the scale factor, $\overline{h}_k = ah_k$ is defined for convenience, the primes ($\,'$) denote derivatives with respect to $\tau$, and $c_g(\tau)$ is the effective sound speed associated with GWs and may be dependent on time. For this paper, we will set $K = 0$ and $c_g = 1$\footnote{Refer to Sec.\ B2 of Ref.\ \cite{Gumrukcuoglu:2012wt} for consideration of non-zero $K$ and Sec.\ IV E4 of Ref.\ \cite{Gumrukcuoglu:2012wt} for consideration of general $c_g$.}.
 
 \begin{figure}[ht]
-    \includegraphics[scale=0.65]{fig/fig0.pdf}
+    \includegraphics[scale=0.65]{fig/fig1.pdf}
     \caption{Evolution of the real part of $\overline{h}_k(\tau)$. There is a gap in the domain of the conformal time from $-\tau_r$ to $\tau_r$, but $\overline{h}_k(\tau)$ and $\overline{h}_k'(\tau)$ remain continuous. This is a numerical solution to Eq.\ \ref{eqn:eom}, and the exact values for the parameters are detailed in the code \cite{GH}.}
     \label{fig:mode}
 \end{figure}
@@ -589,31 +575,28 @@ We now discuss the region of the parameter space that can potentially explain th
 \begin{figure}
 \begin{subfigure}{.5\textwidth}
   \centering
-  \includegraphics[width=.88\linewidth]{fig/fig4a.pdf}  
+  \includegraphics[width=.88\linewidth]{fig/fig2a.pdf}  
   \label{fig:contour-a}
 \end{subfigure}
 \begin{subfigure}{.5\textwidth}
   \centering
-  \includegraphics[width=.88\linewidth]{fig/fig4b.pdf}  
+  \includegraphics[width=.88\linewidth]{fig/fig2b.pdf}  
   \label{fig:contour-b}
 \end{subfigure}
 \begin{subfigure}{.5\textwidth}
   \centering
-  \includegraphics[width=.88\linewidth]{fig/fig4c.pdf}  
+  \includegraphics[width=.88\linewidth]{fig/fig2c.pdf}  
   \label{fig:contour-c}
 \end{subfigure}
-\caption{We plot $\Omega_{\text{GW},0}$ as a function of $f$ and $M$ (top), $\tau_m$ (middle), and $H_{\inf}$ (bottom). The frequency ranges from the scale corresponding to matter-radiation inequality ($\sim 3\times10^{-16}$ Hz) to the inflationary UV cutoff ($\sim \tau_r/(2\pi)$ \cite{Fujita:2018ehq}).} 
+\caption{We plot $\Omega_{\text{GW},0}$ as a function of $f$ and $M$ (top), $\tau_m$ (middle), and $H_{\inf}$ (bottom). The frequency ranges from the scale corresponding to matter-radiation inequality ($\sim 3\times10^{-16}$ Hz) to the inflationary UV cutoff ($\sim 1/(2\pi\tau_r)$ \cite{Fujita:2018ehq}).} 
 \label{fig:contours}
 \end{figure}
 
-
-%\onecolumngrid
 \begin{figure*}
-\includegraphics[width=\textwidth]{fig/fig3_cropped.pdf} 
+\includegraphics[width=\textwidth]{fig/fig3.pdf} 
 \caption{GWB produced by the SFM model. Both figures: we show the BBN excluded region shaded in purple at the top, the periodogram for a Hellings-Down-correlated free spectral process \cite{Agazie:2023} in shaded grey, the $1\sigma$, $2\sigma$, and $3\sigma$ posterior medians for NG15 \cite{Agazie:2023} in darker to lighter orange respectively, and the GWB spectrum produced by an astrophysical population of inspiraling SMBHBs with parameters detailed in Eq.\ A1 of Ref.\ \cite{Afzal:2023} as a black dotted line. Top: The red curve is the GWB spectra fitted to the $1\sigma$ posterior, the blue curve is fitted to the $2\sigma$ posterior, and the green curve is fitted to the $3\sigma$ posterior. Bottom: the purple curve is the energy density that respects the BBN bound for high frequency and passes through the upper limit of the free spectral process of the data, and the golden curve is the energy density that respects the CMB bound for low frequency and passes through the lower limit of the free spectral process of the data.} 
 \label{fig:GWB}
 \end{figure*}
-%\twocolumngrid
 
 By varying the other two parameters, $M_{\text{GW}}$ and $H_{\inf}$, we found resulting energy densities that lie within $1\sigma$, $2\sigma$, and $3\sigma$ of the power law posterior of the signal. Our values for the parameters were $M_{\text{GW}} = 1.298H_{\inf}$ and $H_{\inf} =  1.7 \GeV$ to stay within $1\sigma$ of the posterior, $M_{\text{GW}} = 1.251H_{\inf}$ and $H_{\inf} = 8.0 \GeV$ to stay within $2\sigma$ of the posterior $M_{\text{GW}} = 1.201H_{\inf}$ and $H_{\inf} = 50.0 \GeV$ to stay within $3\sigma$ of the posterior. We have kept the ratio $\tau_m/\tau_r$ constant for these three energy densities, although the magnitude of $\tau_m$ changes due to the change in $\tau_r$. 
 
@@ -626,37 +609,32 @@ where $f_{BBN}$ is the present day frequency at which the gravitational waves at
     \Omega_{\text{GW}}(f) \lesssim 1 \times 10^{-6},\ f > f_{\text{BBN}} \ .
 \end{equation}
 
-Although it may appear that the energy densities we consider in Fig.\ \ref{fig:GWB} violate the BBN bound for higher frequencies, since the energy densities in the full range of frequencies pass into the forbidden energy range as we see in Fig.\ \ref{fig:supp}, we keep in mind that the BBN bound only applies for gravitational waves that were blue tilted by massive gravitons before BBN took place. If the graviton were massive during BBN 
+Although it may appear that the energy densities we consider in Fig.\ \ref{fig:GWB} violate the BBN bound for higher frequencies, since the energy densities in the full range of frequencies pass into the forbidden energy range as we see in Fig.\ \ref{fig:supp}, we keep in mind that the BBN bound only applies to gravitational waves that were blue tilted by massive gravitons before BBN took place. If the graviton were massive during BBN 
 \begin{equation}\label{eqn:massive_bbn}
     \frac{\tau_m}{\tau_r} \gtrsim \frac{\tau_{\text{BBN}}}{\tau_r} = \sqrt{\frac{H_{\inf}}{H_{\text{BBN}}}}\ ,
 \end{equation}
-then we should be able to relax the BBN bound. This is because gravitons do not contribute to the relativistic degrees of freedom during BBN, since they would have had a significant mass that would prevent them from being relativistic. Ref.\ \cite{Fujita:2018ehq} conservatively respects the BBN limits even though their considered massive graviton scenarios have blue tilted the primordial energy density during BBN, but in this paper we shall not.  
+then we should be able to relax the BBN bound. This is because gravitons do not contribute to the relativistic degrees of freedom during BBN \cite{Fujita:2018ehq}, since they would have had a significant mass, meaning that they contribute to non-relativistic species.
 
-We note that if we wish to conservatively respect the BBN bound or the CMB bound, in the same way as Ref.\ \cite{Fujita:2018ehq}, and still have our theory of MG produce the SGWB for some range of frequencies, constrained by the free spectral violins \cite{Agazie:2023}, we can use the parameters investigated by Ref.\ \cite{Fujita:2018ehq}, with some slight modifications. We see that to order to partially produce the signal in the higher energy density and frequency regime, as shown by the purple curve in Figs.\ \ref{fig:GWB} and \ref{fig:supp}, the CMB bound must be violated. On the other hand, we find that while attempting to partially produce the signal in the lower energy density and frequency regime, as shown by the golden curve in Figs.\ \ref{fig:GWB} and \ref{fig:supp}, the SMBHB power spectrum turns out to be a better fit for the signal. The requirement to respect both bounds to reproduce the signal seems to be mutually exclusive.
+We note that if we still wish to conservatively respect the BBN bound in the same way as Ref.\ \cite{Fujita:2018ehq} and still have our theory of MG be consistent with NG15, we can use the parameters investigated by Ref.\ \cite{Fujita:2018ehq} with some slight modifications. We see that to order to partially produce the signal in the higher energy density and frequency regime, as shown by the purple curve in Figs.\ \ref{fig:GWB} and \ref{fig:supp}, the CMB bound must be violated. On the other hand, we find that while attempting to partially produce the signal in the lower energy density and frequency regime, as shown by the golden curve in Figs.\ \ref{fig:GWB} and \ref{fig:supp}, the SMBHB power spectrum turns out to be a better fit to the signal. The requirement to respect both bounds to reproduce the signal seems to be mutually exclusive. But if we do not conservatively respect the BBN bound, then it appears that we can achieve good agreement with the signal, with the caveat being that the cutoff time for the graviton mass is deep into the matter dominated era.
 
 \begin{figure}[ht]
-    \includegraphics[width=\linewidth]{fig/fig5_cropped.pdf}
-    \caption{The energy densities in Fig.\ \ref{fig:GWB} plotted over the whole frequency range specified in Fig.\ \ref{fig:contours}. The red, blue, green, purple, and golden curves correspond to the energy densities of the same color in Fig.\ \ref{fig:GWB}. The turquoise curve below the energy densities is the sensitivity curve for NANOGrav. The blue shaded region represents the exluded region from the CMB bound.} 
+    \includegraphics[width=\linewidth]{fig/fig4.pdf}
+    \caption{The energy densities in Fig.\ \ref{fig:GWB} plotted over the frequency range specified in Fig.\ \ref{fig:contours}. The red, blue, green, purple, and golden curves correspond to the energy densities of the same color in Fig.\ \ref{fig:GWB}. The turquoise curve below the energy densities is the sensitivity curve for NG15. The blue shaded region on the left is the excluded region from the CMB bound. The BBN bound region may be ignored if the graviton remains massive during BBN.} 
     \label{fig:supp}
 \end{figure}
 
 \section{Discussion}\label{sec:discussion}
-In this paper, we discussed how the constant mass and step function mass models of massive gravity can be constrained by the 15-year NANOGrav data set. We note that the selection of the parameters in the step function mass model leads to energy densities that violate the BBN bound for higher frequencies, specifically in the region of frequencies $\gtrsim 10^{-6}$ Hz. We propose that there could be some mechanism that suppresses the energy density of gravitational waves from the primordial era for those frequencies. A mechanism analogous to the damping of the energy density from the free-streaming neutrinos \cite{Durrer:1997ta,Weinberg:2003ur} could be behind such a suppression necessary to obey the BBN bound, if this model of MG is to be the dominant source of the background. 
-%TK added
-For example, propagation of gravitational waves in turbulent primordial radiation-dominated plasma.\footnote{Any turbulent sources through their anisotropic stress induce the gravitational waves signal that is has $\Omega_{\rm GW} \propto f^{-8/3}$  at high frequency tail \cite{RoperPol:2019wvy}} 
-%TK 
-Additionally, we find that it is difficult to prevent the violation of both BBN and CMB bounds while also trying to explain the signal more convincingly than the SMBHB explanation. 
+In this paper, we discussed how the constant mass and step function mass models of massive gravity can be constrained by the 15-year NANOGrav data set. We note that the selection of the parameters in the step function mass model leads to energy densities that violate the BBN bound for higher frequencies, specifically in the region of frequencies $\gtrsim 10^{-6}$ Hz. We propose that there could be some mechanism that suppresses the energy density of gravitational waves from the primordial era for those frequencies. A mechanism analogous to the damping of the energy density from the free-streaming neutrinos \cite{Durrer:1997ta,Weinberg:2003ur} could be behind such a suppression necessary to obey the BBN bound, if this model of MG is to be the dominant source of the background. For example, the propagation of gravitational waves in the turbulent primordial radiation-dominated plasma\footnote{Turbulent sources induce GWs through their anisotropic stress tensor, with $\Omega_{\rm GW} \propto f^{-8/3}$ for  high frequencies.} \cite{RoperPol:2019wvy} may provide the necessary suppression at the short wavelength regime \cite{Deryagin:1986}. 
 
 Observations of gravitational waves have mostly ruled out the possibility of gravitons with a very low but nonzero mass, since the expectation that a peak, which is predicted from such a model \cite{Gumrukcuoglu:2012wt}, could be present for lower frequencies is becoming slim. Therefore, the more plausible possibility of massive gravity is the scenario in which the graviton mass is a non-constant function of time. We have only considered a step function as the time dependent function, but more complicated functions are possible. The mechanism behind such a mass decay would come from the exact nature of the phase transition of the gravitational field. It may be fruitful to pursue an investigation to place constraints on the specific evolution of the mass during the phase transition. Then, we would be able to probe the mass evolution and shed insight into the time dependent behavior beyond a step function. 
 
-Additionally, further observations that place constraints on the Hubble rate of expansion, the scale factor, and the time associated with inflation would be able to refute or confirm our theory. Another limitation comes from the fact that the BBN bound is defined in terms of a logarithmic integral of the whole frequency interval of the energy density. The suppression we propose is flat in the log-log scale, which would lead to a non-trivial bound from BBN. In addition to signals we have already observed with interferometers, we expect a more drastic suppression for higher frequencies than we discuss. Future work may investigate the nature of this suppression and propose plausible mechanisms for it.
+Additionally, further observations that place constraints on the Hubble rate of expansion, the scale factor, and the time associated with inflation would be able to constrain the parameters of this theory. In addition to signals we have already observed with interferometers, we expect a more drastic suppression for higher frequencies than we discuss. Future work may investigate the nature of this suppression and propose plausible mechanisms for it.
 
 \vspace{2mm}
-{\bf Data availability}---The NANOGrav 15-Year data used in this paper is available at \href{https://nanograv.org/science/data}{NANOGrav}. Source code to reproduce all of the figures in this paper is located in our Github repository \cite{GH}. 
+{\bf Data availability}---The NANOGrav 15-Year data used in this paper is available at \href{https://nanograv.org/science/data}{NANOGrav}. Source code to reproduce all of the figures in this paper is available in our GitHub repository \cite{GH}. 
 
 \vspace{2mm}
-{\bf Acknowledgements}--- We appreciate discussions and useful comments from Axel Brandenburg, Neil J.\ Cornish, Arthur B.\ Kosowsky, and Sayan Mandal. We thank Emma Clarke, Jeffrey S.\ Hazboun, and William G.\ Lamb for their help with data analysis. We acknowledge the PITT PACC workshop ``Unravelling the Universe with Pulsar Timing Arrays Workshop" 
-during which the paper has been finalized. TK and MG acknowledge partial support from the NASA Astrophysics Theory Program Award 80NSSC22K0825.
+{\bf Acknowledgements}--- We thank Sachiko Kuroyanagi and Shinji Mukohyama for helpful discussions related to the model \cite{Fujita:2018ehq} and feedback. We appreciate discussions and useful comments from Axel Brandenburg, Neil J.\ Cornish, Arthur B.\ Kosowsky, and Sayan Mandal. We thank Emma Clarke, Jeffrey S.\ Hazboun, and William G.\ Lamb for their help with plotting the NANOGrav data. We thank the organizers and participants of the PITT PACC workshop ``Unravelling the Universe with Pulsar Timing Arrays Workshop" during which the paper has been finalized. TK and MG acknowledge partial support from the NASA Astrophysics Theory Program Award 80NSSC22K0825.
 
 \bibliographystyle{apsrev4-2_edited}
 \bibliography{refs}
