Made final changes before submitting to PRD

--- a/refs.bib
+++ b/refs.bib
@@ -113,6 +113,60 @@
     year = "1998"
 }
 
+@article{Brandenburg:2021tmp,
+    author = "Brandenburg, Axel and Clarke, Emma and He, Yutong and Kahniashvili, Tina",
+    title = "{Can we observe the QCD phase transition-generated gravitational waves through pulsar timing arrays?}",
+    eprint = "2102.12428",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.CO",
+    reportNumber = "NORDITA-2021-016",
+    doi = "10.1103/PhysRevD.104.043513",
+    journal = "Phys. Rev. D",
+    volume = "104",
+    number = "4",
+    pages = "043513",
+    year = "2021"
+}
+@article{Kahniashvili:2021gym,
+    author = "Kahniashvili, Tina and Clarke, Emma and Stepp, Jonathan and Brandenburg, Axel",
+    title = "{Big Bang Nucleosynthesis Limits and Relic Gravitational-Wave Detection Prospects}",
+    eprint = "2111.09541",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.CO",
+    reportNumber = "NORDITA-2021-089",
+    doi = "10.1103/PhysRevLett.128.221301",
+    journal = "Phys. Rev. Lett.",
+    volume = "128",
+    number = "22",
+    pages = "221301",
+    year = "2022"
+}
+@article{RoperPol:2022iel,
+    author = "Roper Pol, Alberto and Caprini, Chiara and Neronov, Andrii and Semikoz, Dmitri",
+    title = "{Gravitational wave signal from primordial magnetic fields in the Pulsar Timing Array frequency band}",
+    eprint = "2201.05630",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.CO",
+    doi = "10.1103/PhysRevD.105.123502",
+    journal = "Phys. Rev. D",
+    volume = "105",
+    number = "12",
+    pages = "123502",
+    year = "2022"
+}
+@article{Neronov:2020qrl,
+    author = "Neronov, Andrii and Roper Pol, Alberto and Caprini, Chiara and Semikoz, Dmitri",
+    title = "{NANOGrav signal from magnetohydrodynamic turbulence at the QCD phase transition in the early Universe}",
+    eprint = "2009.14174",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.CO",
+    doi = "10.1103/PhysRevD.103.L041302",
+    journal = "Phys. Rev. D",
+    volume = "103",
+    number = "4",
+    pages = "041302",
+    year = "2021"
+}
 @article{deRham:2016nuf,
     author = "de Rham, Claudia and Deskins, J. Tate and Tolley, Andrew J. and Zhou, Shuang-Yong",
     title = "{Graviton Mass Bounds}",
@@ -163,20 +217,6 @@
     journal = "Phys. Lett. B",
     volume = "765",
     pages = "339--343",
-    year = "2017"
-}
-
-@article{Blasi:2017pkk,
-    author = "Blasi, Alberto and Maggiore, Nicola",
-    title = "{Massive gravity and Fierz-Pauli theory}",
-    eprint = "1706.08140",
-    archivePrefix = "arXiv",
-    primaryClass = "hep-th",
-    doi = "10.1140/epjc/s10052-017-5205-y",
-    journal = "Eur. Phys. J. C",
-    volume = "77",
-    number = "9",
-    pages = "614",
     year = "2017"
 }
 
@@ -527,42 +567,6 @@ archivePrefix = {arXiv},
     volume = "951",
     number = "1",
     year = "2023"
-}
-
-@article{Antoniadis:2023ott,
-    author = {{EPTA Collaboration} and {InPTA Collaboration} and {Antoniadis}, J. and {Arumugam}, P. and {Arumugam}, S. and {Babak}, S. and {Bagchi}, M. and {Bak Nielsen}, A. -S. and {Bassa}, C.~G. and {Bathula}, A. and {Berthereau}, A. and {Bonetti}, M. and {Bortolas}, E. and {Brook}, P.~R. and {Burgay}, M. and {Caballero}, R.~N. and {Chalumeau}, A. and {Champion}, D.~J. and {Chanlaridis}, S. and {Chen}, S. and {Cognard}, I. and {Dandapat}, S. and {Deb}, D. and {Desai}, S. and {Desvignes}, G. and {Dhanda-Batra}, N. and {Dwivedi}, C. and {Falxa}, M. and {Ferdman}, R.~D. and {Franchini}, A. and {Gair}, J.~R. and {Goncharov}, B. and {Gopakumar}, A. and {Graikou}, E. and {Grie{\ss}meier}, J. -M. and {Guillemot}, L. and {Guo}, Y.~J. and {Gupta}, Y. and {Hisano}, S. and {Hu}, H. and {Iraci}, F. and {Izquierdo-Villalba}, D. and {Jang}, J. and {Jawor}, J. and {Janssen}, G.~H. and {Jessner}, A. and {Joshi}, B.~C. and {Kareem}, F. and {Karuppusamy}, R. and {Keane}, E.~F. and {Keith}, M.~J. and {Kharbanda}, D. and {Kikunaga}, T. and {Kolhe}, N. and {Kramer}, M. and {Krishnakumar}, M.~A. and {Lackeos}, K. and {Lee}, K.~J. and {Liu}, K. and {Liu}, Y. and {Lyne}, A.~G. and {McKee}, J.~W. and {Maan}, Y. and {Main}, R.~A. and {Mickaliger}, M.~B. and {Ni{\c{t}}u}, I.~C. and {Nobleson}, K. and {Paladi}, A.~K. and {Parthasarathy}, A. and {Perera}, B.~B.~P. and {Perrodin}, D. and {Petiteau}, A. and {Porayko}, N.~K. and {Possenti}, A. and {Prabu}, T. and {Quelquejay Leclere}, H. and {Rana}, P. and {Samajdar}, A. and {Sanidas}, S.~A. and {Sesana}, A. and {Shaifullah}, G. and {Singha}, J. and {Speri}, L. and {Spiewak}, R. and {Srivastava}, A. and {Stappers}, B.~W. and {Surnis}, M. and {Susarla}, S.~C. and {Susobhanan}, A. and {Takahashi}, K. and {Tarafdar}, P. and {Theureau}, G. and {Tiburzi}, C. and {van der Wateren}, E. and {Vecchio}, A. and {Venkatraman Krishnan}, V. and {Verbiest}, J.~P.~W. and {Wang}, J. and {Wang}, L. and {Wu}, Z.},
-        title = "{The second data release from the European Pulsar Timing Array. III. Search for gravitational wave signals}",
-      journal = {Astron. Astrophys.},
-     keywords = {gravitational waves, methods: data analysis, pulsars: general, Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Astrophysics of Galaxies},
-         year = 2023,
-        month = oct,
-       volume = {678},
-          eid = {A50},
-        pages = {A50},
-          doi = {10.1051/0004-6361/202346844},
-archivePrefix = {arXiv},
-       eprint = {2306.16214},
- primaryClass = {astro-ph.HE},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2023A&A...678A..50E},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
-
-@article{Antoniadis:2023lym,
-    author = {{EPTA Collaboration} and {Antoniadis}, J. and {Babak}, S. and {Bak Nielsen}, A. -S. and {Bassa}, C.~G. and {Berthereau}, A. and {Bonetti}, M. and {Bortolas}, E. and {Brook}, P.~R. and {Burgay}, M. and {Caballero}, R.~N. and {Chalumeau}, A. and {Champion}, D.~J. and {Chanlaridis}, S. and {Chen}, S. and {Cognard}, I. and {Desvignes}, G. and {Falxa}, M. and {Ferdman}, R.~D. and {Franchini}, A. and {Gair}, J.~R. and {Goncharov}, B. and {Graikou}, E. and {Grie{\ss}meier}, J. -M. and {Guillemot}, L. and {Guo}, Y.~J. and {Hu}, H. and {Iraci}, F. and {Izquierdo-Villalba}, D. and {Jang}, J. and {Jawor}, J. and {Janssen}, G.~H. and {Jessner}, A. and {Karuppusamy}, R. and {Keane}, E.~F. and {Keith}, M.~J. and {Kramer}, M. and {Krishnakumar}, M.~A. and {Lackeos}, K. and {Lee}, K.~J. and {Liu}, K. and {Liu}, Y. and {Lyne}, A.~G. and {McKee}, J.~W. and {Main}, R.~A. and {Mickaliger}, M.~B. and {Ni{\c{t}}u}, I.~C. and {Parthasarathy}, A. and {Perera}, B.~B.~P. and {Perrodin}, D. and {Petiteau}, A. and {Porayko}, N.~K. and {Possenti}, A. and {Quelquejay Leclere}, H. and {Samajdar}, A. and {Sanidas}, S.~A. and {Sesana}, A. and {Shaifullah}, G. and {Speri}, L. and {Spiewak}, R. and {Stappers}, B.~W. and {Susarla}, S.~C. and {Theureau}, G. and {Tiburzi}, C. and {van der Wateren}, E. and {Vecchio}, A. and {Venkatraman Krishnan}, V. and {Verbiest}, J.~P.~W. and {Wang}, J. and {Wang}, L. and {Wu}, Z.},
-        title = "{The second data release from the European Pulsar Timing Array. I. The dataset and timing analysis}",
-      journal = {Astron. Astrophys.},
-     keywords = {gravitational waves, pulsars: general, methods: observational, parallaxes, proper motions, ephemerides, Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Astrophysics of Galaxies, Astrophysics - Instrumentation and Methods for Astrophysics, General Relativity and Quantum Cosmology},
-         year = 2023,
-        month = oct,
-       volume = {678},
-          eid = {A48},
-        pages = {A48},
-          doi = {10.1051/0004-6361/202346841},
-archivePrefix = {arXiv},
-       eprint = {2306.16224},
- primaryClass = {astro-ph.HE},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2023A&A...678A..48E},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
 @article{Xu:2023wog,
@@ -1420,9 +1424,6 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-% first round of requests 
-%
-% Dec 7, 2023, 22:33 
 @article{Choudhury:2023fjs,
        author = {{Choudhury}, Sayantan and {Dey}, Kritartha and {Karde}, Ahaskar},
         title = "{Untangling PBH overproduction in $w$-SIGWs generated by Pulsar Timing Arrays for MST-EFT of single field inflation}",
@@ -1504,7 +1505,6 @@ archivePrefix = {arXiv},
     year = "2014"
 }
 
-% Dec 8, 2023, 04:17
 @article{Kawai:2023nqs,
     author = "Kawai, Shinsuke and Kim, Jinsu",
     title = "{Probing the inflationary moduli space with gravitational waves}",
@@ -1534,7 +1534,6 @@ archivePrefix = {arXiv},
     year = "2021"
 }
 
-% Dec 8, 2023, 06:57
 @article{Franciolini:2023pbf,
     author = "Franciolini, Gabriele and Iovino, Junior., Antonio and Vaskonen, Ville and Veermae, Hardi",
     title = "{Recent Gravitational Wave Observation by Pulsar Timing Arrays and Primordial Black Holes: The Importance of Non-Gaussianities}",
@@ -1566,7 +1565,6 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-% Dec 8, 2023, 12:39
 @article{Chowdhury:2023xvy,
        author = {{Chowdhury}, Debtosh and {Hait}, Arpan and {Mohanty}, Subhendra and {Prakash}, Suraj},
         title = "{Ultralight $(L_\mu-L_\tau)$ vector dark matter interpretation of NANOGrav observations}",
@@ -1584,7 +1582,6 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-% Dec 8, 2023, 06:26
 @article{Basilakos:2023xof,
        author = {{Basilakos}, Spyros and {Nanopoulos}, Dimitri V. and {Papanikolaou}, Theodoros and {Saridakis}, Emmanuel N. and {Tzerefos}, Charalampos},
         title = "{Gravitational wave signatures of no-scale Supergravity in NANOGrav and beyond}",
@@ -1619,7 +1616,6 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-% Dec 9, 2023, 11:46
 @article{Ashoorioon:2022raz,
     author = "Ashoorioon, Amjad and Rezazadeh, Kazem and Rostami, Abasalt",
     title = "{NANOGrav signal from the end of inflation and the LIGO mass and heavier primordial black holes}",
@@ -1632,4 +1628,159 @@ archivePrefix = {arXiv},
     volume = "835",
     pages = "137542",
     year = "2022"
+}
+
+@article{Bernardo:2023mxc,
+    author = "Bernardo, Reginald Christian and Ng, Kin-Wang",
+    title = "{Constraining gravitational wave propagation using pulsar timing array correlations}",
+    eprint = "2302.11796",
+    archivePrefix = "arXiv",
+    primaryClass = "gr-qc",
+    doi = "10.1103/PhysRevD.107.L101502",
+    journal = "Phys. Rev. D",
+    volume = "107",
+    number = "10",
+    pages = "L101502",
+    year = "2023"
+}
+
+@article{Wu:2023rib,
+       author = {{Wu}, Yu-Mei and {Chen}, Zu-Cheng and {Bi}, Yan-Chen and {Huang}, Qing-Guo},
+        title = "{Constraining the Graviton Mass with the NANOGrav 15-Year Data Set}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics, General Relativity and Quantum Cosmology},
+         year = 2023,
+        month = oct,
+          eid = {arXiv:2310.07469},
+        pages = {arXiv:2310.07469},
+          doi = {10.48550/arXiv.2310.07469},
+archivePrefix = {arXiv},
+       eprint = {2310.07469},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2023arXiv231007469W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{Wang:2023div,
+       author = {{Wang}, Sai and {Zhao}, Zhi-Chao},
+        title = "{Unveiling the Graviton Mass Bounds through Analysis of 2023 Pulsar Timing Array Data Releases}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - High Energy Astrophysical Phenomena, General Relativity and Quantum Cosmology},
+         year = 2023,
+        month = jul,
+          eid = {arXiv:2307.04680},
+        pages = {arXiv:2307.04680},
+          doi = {10.48550/arXiv.2307.04680},
+archivePrefix = {arXiv},
+       eprint = {2307.04680},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2023arXiv230704680W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{EPTA:2023sfo,
+    author = {{EPTA Collaboration} and {Antoniadis}, J. and {Babak}, S. and {Bak Nielsen}, A. -S. and {Bassa}, C.~G. and {Berthereau}, A. and {Bonetti}, M. and {Bortolas}, E. and {Brook}, P.~R. and {Burgay}, M. and {Caballero}, R.~N. and {Chalumeau}, A. and {Champion}, D.~J. and {Chanlaridis}, S. and {Chen}, S. and {Cognard}, I. and {Desvignes}, G. and {Falxa}, M. and {Ferdman}, R.~D. and {Franchini}, A. and {Gair}, J.~R. and {Goncharov}, B. and {Graikou}, E. and {Grie{\ss}meier}, J. -M. and {Guillemot}, L. and {Guo}, Y.~J. and {Hu}, H. and {Iraci}, F. and {Izquierdo-Villalba}, D. and {Jang}, J. and {Jawor}, J. and {Janssen}, G.~H. and {Jessner}, A. and {Karuppusamy}, R. and {Keane}, E.~F. and {Keith}, M.~J. and {Kramer}, M. and {Krishnakumar}, M.~A. and {Lackeos}, K. and {Lee}, K.~J. and {Liu}, K. and {Liu}, Y. and {Lyne}, A.~G. and {McKee}, J.~W. and {Main}, R.~A. and {Mickaliger}, M.~B. and {Ni{\c{t}}u}, I.~C. and {Parthasarathy}, A. and {Perera}, B.~B.~P. and {Perrodin}, D. and {Petiteau}, A. and {Porayko}, N.~K. and {Possenti}, A. and {Quelquejay Leclere}, H. and {Samajdar}, A. and {Sanidas}, S.~A. and {Sesana}, A. and {Shaifullah}, G. and {Speri}, L. and {Spiewak}, R. and {Stappers}, B.~W. and {Susarla}, S.~C. and {Theureau}, G. and {Tiburzi}, C. and {van der Wateren}, E. and {Vecchio}, A. and {Venkatraman Krishnan}, V. and {Verbiest}, J.~P.~W. and {Wang}, J. and {Wang}, L. and {Wu}, Z.},
+        title = "{The second data release from the European Pulsar Timing Array. I. The dataset and timing analysis}",
+      journal = {Astron. Astrophys.},
+     keywords = {gravitational waves, pulsars: general, methods: observational, parallaxes, proper motions, ephemerides, Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Astrophysics of Galaxies, Astrophysics - Instrumentation and Methods for Astrophysics, General Relativity and Quantum Cosmology},
+         year = 2023,
+        month = oct,
+       volume = {678},
+          eid = {A48},
+        pages = {A48},
+          doi = {10.1051/0004-6361/202346841},
+archivePrefix = {arXiv},
+       eprint = {2306.16224},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2023A&A...678A..48E},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{EPTA:2023akd,
+    author = "Antoniadis, J. and others",
+    collaboration = "EPTA, InPTA",
+    title = "{The second data release from the European Pulsar Timing Array - II. Customised pulsar noise models for spatially correlated gravitational waves}",
+    eprint = "2306.16225",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.HE",
+    doi = "10.1051/0004-6361/202346842",
+    journal = "Astron. Astrophys.",
+    volume = "678",
+    pages = "A49",
+    year = "2023"
+}
+
+@article{EPTA:2023fyk,
+    author = "Antoniadis, J. and others",
+    collaboration = "EPTA, InPTA:",
+    title = "{The second data release from the European Pulsar Timing Array - III. Search for gravitational wave signals}",
+    eprint = "2306.16214",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.HE",
+    doi = "10.1051/0004-6361/202346844",
+    journal = "Astron. Astrophys.",
+    volume = "678",
+    pages = "A50",
+    year = "2023"
+}
+
+@article{EPTA:2023xxk,
+    author = {{Antoniadis}, J. and {Arumugam}, P. and {Arumugam}, S. and {Auclair}, P. and {Babak}, S. and {Bagchi}, M. and {Bak Nielsen}, A. -S. and {Barausse}, E. and {Bassa}, C.~G. and {Bathula}, A. and {Berthereau}, A. and {Bonetti}, M. and {Bortolas}, E. and {Brook}, P.~R. and {Burgay}, M. and {Caballero}, R.~N. and {Caprini}, C. and {Chalumeau}, A. and {Champion}, D.~J. and {Chanlaridis}, S. and {Chen}, S. and {Cognard}, I. and {Crisostomi}, M. and {Dandapat}, S. and {Deb}, D. and {Desai}, S. and {Desvignes}, G. and {Dhanda-Batra}, N. and {Dwivedi}, C. and {Falxa}, M. and {Fastidio}, F. and {Ferdman}, R.~D. and {Franchini}, A. and {Gair}, J.~R. and {Goncharov}, B. and {Gopakumar}, A. and {Graikou}, E. and {Grie{\ss}meier}, J. -M. and {Gualandris}, A. and {Guillemot}, L. and {Guo}, Y.~J. and {Gupta}, Y. and {Hisano}, S. and {Hu}, H. and {Iraci}, F. and {Izquierdo-Villalba}, D. and {Jang}, J. and {Jawor}, J. and {Janssen}, G.~H. and {Jessner}, A. and {Joshi}, B.~C. and {Kareem}, F. and {Karuppusamy}, R. and {Keane}, E.~F. and {Keith}, M.~J. and {Kharbanda}, D. and {Khizriev}, T. and {Kikunaga}, T. and {Kolhe}, N. and {Kramer}, M. and {Krishnakumar}, M.~A. and {Lackeos}, K. and {Lee}, K.~J. and {Liu}, K. and {Liu}, Y. and {Lyne}, A.~G. and {McKee}, J.~W. and {Maan}, Y. and {Main}, R.~A. and {Mickaliger}, M.~B. and {Middleton}, H. and {Neronov}, A. and {Nitu}, I.~C. and {Nobleson}, K. and {Paladi}, A.~K. and {Parthasarathy}, A. and {Perera}, B.~B.~P. and {Perrodin}, D. and {Petiteau}, A. and {Porayko}, N.~K. and {Possenti}, A. and {Prabu}, T. and {Postnov}, K. and {Quelquejay Leclere}, H. and {Rana}, P. and {Roper Pol}, A. and {Samajdar}, A. and {Sanidas}, S.~A. and {Semikoz}, D. and {Sesana}, A. and {Shaifullah}, G. and {Singha}, J. and {Smarra}, C. and {Speri}, L. and {Spiewak}, R. and {Srivastava}, A. and {Stappers}, B.~W. and {Steer}, D.~A. and {Surnis}, M. and {Susarla}, S.~C. and {Susobhanan}, A. and {Takahashi}, K. and {Tarafdar}, P. and {Theureau}, G. and {Tiburzi}, C. and {Truant}, R.~J. and {van der Wateren}, E. and {Valtolina}, S. and {Vecchio}, A. and {Venkatraman Krishnan}, V. and {Verbiest}, J.~P.~W. and {Wang}, J. and {Wang}, L. and {Wu}, Z.},
+        title = "{The second data release from the European Pulsar Timing Array: V. Implications for massive black holes, dark matter and the early Universe}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Astrophysics of Galaxies, General Relativity and Quantum Cosmology},
+         year = 2023,
+        month = jun,
+          eid = {arXiv:2306.16227},
+        pages = {arXiv:2306.16227},
+          doi = {10.48550/arXiv.2306.16227},
+archivePrefix = {arXiv},
+       eprint = {2306.16227},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2023arXiv230616227A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{Arnowitt:1962hi,
+    author = "Arnowitt, Richard L. and Deser, Stanley and Misner, Charles W.",
+    title = "{The Dynamics of general relativity}",
+    eprint = "gr-qc/0405109",
+    archivePrefix = "arXiv",
+    doi = "10.1007/s10714-008-0661-1",
+    journal = "Gen. Rel. Grav.",
+    volume = "40",
+    pages = "1997--2027",
+    year = "2008"
+}
+
+@article{DeFelice:2021trp,
+    author = "De Felice, Antonio and Mukohyama, Shinji and Pookkillath, Masroor C.",
+    title = "{Minimal theory of massive gravity and constraints on the graviton mass}",
+    eprint = "2110.01237",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.CO",
+    reportNumber = "YITP-21-102, IPMU21-0060",
+    doi = "10.1088/1475-7516/2021/12/011",
+    journal = "JCAP",
+    volume = "12",
+    number = "12",
+    pages = "011",
+    year = "2021"
+}
+
+@article{DeFelice:2023bwq,
+    author = {{De Felice}, Antonio and {Kumar}, Suresh and {Mukohyama}, Shinji and {Nunes}, Rafael C.},
+        title = "{Observational bounds on extended minimal theories of massive gravity: New limits on the graviton mass}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics, General Relativity and Quantum Cosmology},
+         year = 2023,
+        month = nov,
+          eid = {arXiv:2311.10530},
+        pages = {arXiv:2311.10530},
+          doi = {10.48550/arXiv.2311.10530},
+archivePrefix = {arXiv},
+       eprint = {2311.10530},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2023arXiv231110530D},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
