--- a/refs.bib
+++ b/refs.bib
@@ -127,6 +127,7 @@
     pages = "043513",
     year = "2021"
 }
+
 @article{Kahniashvili:2021gym,
     author = "Kahniashvili, Tina and Clarke, Emma and Stepp, Jonathan and Brandenburg, Axel",
     title = "{Big Bang Nucleosynthesis Limits and Relic Gravitational-Wave Detection Prospects}",
@@ -154,6 +155,7 @@
     pages = "123502",
     year = "2022"
 }
+
 @article{Neronov:2020qrl,
     author = "Neronov, Andrii and Roper Pol, Alberto and Caprini, Chiara and Semikoz, Dmitri",
     title = "{NANOGrav signal from magnetohydrodynamic turbulence at the QCD phase transition in the early Universe}",
@@ -167,6 +169,7 @@
     pages = "041302",
     year = "2021"
 }
+
 @article{deRham:2016nuf,
     author = "de Rham, Claudia and Deskins, J. Tate and Tolley, Andrew J. and Zhou, Shuang-Yong",
     title = "{Graviton Mass Bounds}",
@@ -478,7 +481,7 @@ archivePrefix = {arXiv},
     year = "2014"
 }
 
-@ARTICLE{Rajagopal:1995,
+@article{Rajagopal:1995,
 	author = {{Rajagopal}, Mohan and {Romani}, Roger W.},
 	title = "{Ultra--Low-Frequency Gravitational Radiation from Massive Black Hole Binaries}",
 	journal = {The Astrophysical Journal},
@@ -653,18 +656,22 @@ archivePrefix = {arXiv},
 }
 
 @article{PPTA:2022eul,
-    author = "Wu, Yu-Mei and Chen, Zu-Cheng and Huang, Qing-Guo and Zhu, Xingjiang and Bhat, N. D. Ramesh and Feng, Yi and Hobbs, George and Manchester, Richard N. and Russell, Christopher J. and Shannon, R. M.",
-    collaboration = "PPTA",
-    title = "{Constraining ultralight vector dark matter with the Parkes Pulsar Timing Array second data release}",
-    eprint = "2210.03880",
-    archivePrefix = "arXiv",
-    primaryClass = "astro-ph.CO",
-    doi = "10.1103/PhysRevD.106.L081101",
-    journal = "Phys. Rev. D",
-    volume = "106",
-    number = "8",
-    pages = "L081101",
-    year = "2022"
+       author = {{Wu}, Yu-Mei and {Chen}, Zu-Cheng and {Huang}, Qing-Guo and {Zhu}, Xingjiang and {Bhat}, N.~D. Ramesh and {Feng}, Yi and {Hobbs}, George and {Manchester}, Richard N. and {Russell}, Christopher J. and {Shannon}, R.~M. and {PPTA Collaboration}},
+        title = "{Constraining ultralight vector dark matter with the Parkes Pulsar Timing Array second data release}",
+      journal = {\prd},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Astrophysics of Galaxies, Astrophysics - High Energy Astrophysical Phenomena, General Relativity and Quantum Cosmology, High Energy Physics - Phenomenology},
+         year = 2022,
+        month = oct,
+       volume = {106},
+       number = {8},
+          eid = {L081101},
+        pages = {L081101},
+          doi = {10.1103/PhysRevD.106.L081101},
+archivePrefix = {arXiv},
+       eprint = {2210.03880},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2022PhRvD.106h1101W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
 @article{Wu:2023pbt,
@@ -772,18 +779,25 @@ archivePrefix = {arXiv},
 
 
 @article{Xue:2021gyq,
-    author = "Xue, Xiao and others",
-    title = "{Constraining Cosmological Phase Transitions with the Parkes Pulsar Timing Array}",
-    eprint = "2110.03096",
-    archivePrefix = "arXiv",
-    primaryClass = "astro-ph.CO",
-    doi = "10.1103/PhysRevLett.127.251303",
-    journal = "Phys. Rev. Lett.",
-    volume = "127",
-    number = "25",
-    pages = "251303",
-    year = "2021"
+    author = {{Xue}, Xiao and {Bian}, Ligong and {Shu}, Jing and {Yuan}, Qiang and {Zhu}, Xingjiang and {Bhat}, N.~D. Ramesh and {Dai}, Shi and {Feng}, Yi and {Goncharov}, Boris and {Hobbs}, George and {Howard}, Eric and {Manchester}, Richard N. and {Russell}, Christopher J. and {Reardon}, Daniel J. and {Shannon}, Ryan M. and {Spiewak}, Ren{\'e}e and {Thyagarajan}, Nithyanandan and {Wang}, Jingbo},
+        title = "{Constraining Cosmological Phase Transitions with the Parkes Pulsar Timing Array}",
+      journal = {\prl},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics, High Energy Physics - Phenomenology},
+         year = 2021,
+        month = dec,
+       volume = {127},
+       number = {25},
+          eid = {251303},
+        pages = {251303},
+          doi = {10.1103/PhysRevLett.127.251303},
+archivePrefix = {arXiv},
+       eprint = {2110.03096},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021PhRvL.127y1303X},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+
 
 @article{NANOGrav:2021flc,
     author = "Arzoumanian, Zaven and others",
@@ -945,21 +959,22 @@ archivePrefix = {arXiv},
 }
 
 @article{Saito:2008jc,
-	author         = "Saito, Ryo and Yokoyama, Jun'ichi",
-	title          = "{Gravitational wave background as a probe of the
-	primordial black hole abundance}",
-	journal        = "Phys. Rev. Lett.",
-	volume         = "102",
-	year           = "2009",
-	pages          = "161101",
-	doi            = "10.1103/PhysRevLett.102.161101,
-	10.1103/PhysRevLett.107.069901",
-	note           = "[Erratum: Phys. Rev. Lett.107,069901(2011)]",
-	eprint         = "0812.4339",
-	archivePrefix  = "arXiv",
-	primaryClass   = "astro-ph",
-	reportNumber   = "RESCEU-63-08",
-	SLACcitation   = "%%CITATION = ARXIV:0812.4339;%%"
+	author = {{Saito}, Ryo and {Yokoyama}, Jun'Ichi},
+        title = "{Gravitational-Wave Background as a Probe of the Primordial Black-Hole Abundance}",
+      journal = {\prl},
+     keywords = {04.30.Db, 04.70.-s, 98.70.Vc, 98.80.-k, Wave generation and sources, Physics of black holes, Background radiations, Cosmology, Astrophysics, General Relativity and Quantum Cosmology, High Energy Physics - Phenomenology},
+         year = 2009,
+        month = apr,
+       volume = {102},
+       number = {16},
+          eid = {161101},
+        pages = {161101},
+          doi = {10.1103/PhysRevLett.102.161101},
+archivePrefix = {arXiv},
+       eprint = {0812.4339},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2009PhRvL.102p1101S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
 @article{Young:2014ana,
@@ -992,17 +1007,22 @@ archivePrefix = {arXiv},
 }
 
 @article{Yuan:2019udt,
-    author = "Yuan, Chen and Chen, Zu-Cheng and Huang, Qing-Guo",
-    title = "{Probing primordial\textendash{}black-hole dark matter with scalar induced gravitational waves}",
-    eprint = "1906.11549",
-    archivePrefix = "arXiv",
-    primaryClass = "astro-ph.CO",
-    doi = "10.1103/PhysRevD.100.081301",
-    journal = "Phys. Rev. D",
-    volume = "100",
-    number = "8",
-    pages = "081301",
-    year = "2019"
+       author = {{Yuan}, Chen and {Chen}, Zu-Cheng and {Huang}, Qing-Guo},
+        title = "{Probing primordial-black-hole dark matter with scalar induced gravitational waves}",
+      journal = {\prd},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics, General Relativity and Quantum Cosmology, High Energy Physics - Phenomenology, High Energy Physics - Theory},
+         year = 2019,
+        month = oct,
+       volume = {100},
+       number = {8},
+          eid = {081301(R)},
+        pages = {081301(R)},
+          doi = {10.1103/PhysRevD.100.081301},
+archivePrefix = {arXiv},
+       eprint = {1906.11549},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019PhRvD.100h1301Y},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
 @article{Chen:2019xse,
@@ -1149,7 +1169,7 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@Article{Carr:1974nx,
+@article{Carr:1974nx,
   author  = {Carr, Bernard J. and Hawking, S. W.},
   journal = {Mon. Not. Roy. Astron. Soc.},
   title   = {{Black holes in the early Universe}},
@@ -1159,7 +1179,7 @@ archivePrefix = {arXiv},
   groups  = {inspirehep},
 }
 
-@Article{Hawking:1971ei,
+@article{Hawking:1971ei,
   author  = {Hawking, Stephen},
   journal = {Mon. Not. Roy. Astron. Soc.},
   title   = {{Gravitationally collapsed objects of very low mass}},
@@ -1169,7 +1189,7 @@ archivePrefix = {arXiv},
   groups  = {inspirehep},
 }
 
-@Article{Zeldovich:1967lct,
+@article{Zeldovich:1967lct,
   author  = {Zel'dovich, Ya. B. and Novikov, I. D.},
   journal = {Soviet Astron. AJ (Engl. Transl. ),},
   title   = {{The Hypothesis of Cores Retarded during Expansion and the Hot Cosmological Model}},
@@ -1372,17 +1392,22 @@ archivePrefix = {arXiv},
 }
 
 @article{Lasky:2015lej,
-    author = "Lasky, Paul D. and others",
-    title = "{Gravitational-wave cosmology across 29 decades in frequency}",
-    eprint = "1511.05994",
-    archivePrefix = "arXiv",
-    primaryClass = "astro-ph.CO",
-    doi = "10.1103/PhysRevX.6.011035",
-    journal = "Phys. Rev. X",
-    volume = "6",
-    number = "1",
-    pages = "011035",
-    year = "2016"
+      author = {{Lasky}, Paul D. and {Mingarelli}, Chiara M.~F. and {Smith}, Tristan L. and {Giblin}, John T. and {Thrane}, Eric and {Reardon}, Daniel J. and {Caldwell}, Robert and {Bailes}, Matthew and {Bhat}, N.~D. Ramesh and {Burke-Spolaor}, Sarah and {Dai}, Shi and {Dempsey}, James and {Hobbs}, George and {Kerr}, Matthew and {Levin}, Yuri and {Manchester}, Richard N. and {Os{\l}owski}, Stefan and {Ravi}, Vikram and {Rosado}, Pablo A. and {Shannon}, Ryan M. and {Spiewak}, Ren{\'e}e and {van Straten}, Willem and {Toomey}, Lawrence and {Wang}, Jingbo and {Wen}, Linqing and {You}, Xiaopeng and {Zhu}, Xingjiang},
+        title = "{Gravitational-Wave Cosmology across 29 Decades in Frequency}",
+      journal = {Physical Review X},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics, General Relativity and Quantum Cosmology},
+         year = 2016,
+        month = jan,
+       volume = {6},
+       number = {1},
+          eid = {011035},
+        pages = {011035},
+          doi = {10.1103/PhysRevX.6.011035},
+archivePrefix = {arXiv},
+       eprint = {1511.05994},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016PhRvX...6a1035L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
 @article{Zhang:2023nrs,
@@ -1535,17 +1560,22 @@ archivePrefix = {arXiv},
 }
 
 @article{Franciolini:2023pbf,
-    author = "Franciolini, Gabriele and Iovino, Junior., Antonio and Vaskonen, Ville and Veermae, Hardi",
-    title = "{Recent Gravitational Wave Observation by Pulsar Timing Arrays and Primordial Black Holes: The Importance of Non-Gaussianities}",
-    eprint = "2306.17149",
-    archivePrefix = "arXiv",
-    primaryClass = "astro-ph.CO",
-    doi = "10.1103/PhysRevLett.131.201401",
-    journal = "Phys. Rev. Lett.",
-    volume = "131",
-    number = "20",
-    pages = "201401",
-    year = "2023"
+    author = {{Franciolini}, Gabriele and {Iovino}, Antonio Junior and {Vaskonen}, Ville and {Veerm{\"a}e}, Hardi},
+        title = "{Recent Gravitational Wave Observation by Pulsar Timing Arrays and Primordial Black Holes: The Importance of Non-Gaussianities}",
+      journal = {\prl},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - High Energy Astrophysical Phenomena, General Relativity and Quantum Cosmology, High Energy Physics - Phenomenology},
+         year = 2023,
+        month = nov,
+       volume = {131},
+       number = {20},
+          eid = {201401},
+        pages = {201401},
+          doi = {10.1103/PhysRevLett.131.201401},
+archivePrefix = {arXiv},
+       eprint = {2306.17149},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2023PhRvL.131t1401F},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
 @article{Ellis:2023oxs,
@@ -1769,7 +1799,7 @@ archivePrefix = {arXiv},
 }
 
 @article{DeFelice:2023bwq,
-    author = {{De Felice}, Antonio and {Kumar}, Suresh and {Mukohyama}, Shinji and {Nunes}, Rafael C.},
+       author = {{De Felice}, Antonio and {Kumar}, Suresh and {Mukohyama}, Shinji and {Nunes}, Rafael C.},
         title = "{Observational bounds on extended minimal theories of massive gravity: New limits on the graviton mass}",
       journal = {arXiv e-prints},
      keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics, General Relativity and Quantum Cosmology},
